# atypical_planning

./: CMakeLists.txt  package.xml
include/: GlobalPlanner.h  PlannerWrapper.h  RosWrapper.h  corridor.hpp  ecbs_planner.hpp  init_traj_planner.hpp  mission.hpp  param.hpp  result_publisher.hpp  sp_const.hpp
launch/: corridor_generator.launch
launch/rviz_config/: config.rviz  config_8agents.rviz
src/: corridor_generator.cpp  corridor_main_test.cpp  planner_node.cpp
